# CalculusCalc

./: CMakeLists.txt  Makefile  README.md  conanfile.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
cli/: CMakeLists.txt  cli.c
expressions/: CMakeLists.txt
lexer/: CMakeLists.txt  lexer.c
lexer/include/: lexer.h
operations/: CMakeLists.txt
parser/: CMakeLists.txt  parser.c
parser/include/: parser.h
src/: main.c  parser.c
test/: CMakeLists.txt  testLexer.c  testMult.c  testNumber.c  testParenthesis.c  testParserSanity.c  testSub.c  testSum.c  testSumSub.c
test/loadSymbols/: CMakeLists.txt
test/loadSymbols/include/: mallocMock.h
test/loadSymbols/unix/: loadSymbols.c
test/mallocMock/: CMakeLists.txt  mallocMock.c
test/mallocMock/include/: mallocMock.h
ui/: CMakeLists.txt
